--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI_PROD="mongodb+srv://vercel-admin-user:h6cau0IRHv8qsbG4@cluster0.qrzymtg.mongodb.net/wordle?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://vercel-admin-user:h6cau0IRHv8qsbG4@cluster0.qrzymtg.mongodb.net/wordle?retryWrites=true&w=majority"
